# aws-alb-poc

./: README.md
client/: CMakeLists.txt  HelloWorldManager.cpp  HelloWorldManager.h  main.cpp  roots.pem
client/protos/: helloworld.proto
server/: .gitignore  pom.xml
server/src/main/java/: TestServer.java
server/src/main/proto/: helloworld.proto
